--- a/css/decafmud.css
+++ b/css/decafmud.css
@@ -316,17 +316,17 @@
 }
 
 #bugexplanation {
-  background-color: black;
-  margin: 2em;
-  padding: 2em;
-  color: white;
-  border: thick solid white;
+	background-color: black;
+	margin: 2em;
+	padding: 2em;
+	color: white;
+	border: thick solid white;
 }
 
 .closebutton {
-  float: right;
-  margin-right: 5px;
-  width: 25px;
-  height: 25px;
+	float: right;
+	margin-right: 5px;
+	padding: 0px;
+	text-align: center;
 }
 
