close #14 had to escape single quotes

--- a/css/mud-colors.css
+++ b/css/mud-colors.css
@@ -7,7 +7,7 @@
 .t1 {background-color: #fff; color: #FF4000; font-weight: bold;} /** orangered */
 .t2 {background-color: #fff; color: #FF8000; font-weight: bold;} /** orange */
 .t3 {background-color: #fff; color: #FFFF00; font-weight: bold;} /** yellow */
-.t4 {background-color: #fff; color: #80FF00; font-weight: bold;} /** yellowgreen */
+.t4 {background-color: #fff; color: #9ACD32; font-weight: bold;} /** yellowgreen */
 .t5 {background-color: #fff; color: #00FF00; font-weight: bold;} /** green */
 .t6 {background-color: #fff; color: #00FFFF; font-weight: bold;} /** turquoise */
 .t7 {background-color: #fff; color: #0000FF; font-weight: bold;} /** blue */
